# microbloq

./: CMakeLists.txt  README.md
include/: lista.h  parser.h
main/: CMakeLists.txt
src/: CMakeLists.txt  lista.c  parser.c
